Magnetic lengths for correctors
Added magnetic lengths for HCORs and VCORs

--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -87,6 +87,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0002;
 SLOPE = 0.0989613526570049;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 176.594827586207;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-01:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -103,6 +104,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0006;
 SLOPE = 0.101352657004831;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 182.039045553145;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-02:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -119,6 +121,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0010;
 SLOPE = 0.101352657004831;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 182.039045553145;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-03:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -135,6 +138,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0003;
 SLOPE = 0.101763285024155;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 181.987041036717;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-04:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -151,6 +155,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0001;
 SLOPE = 0.103007246376812;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 182.24358974359;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-05:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -167,6 +172,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0004;
 SLOPE = 0.102617753623188;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 182.725806451613;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-06:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -183,6 +189,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0005;
 SLOPE = 0.103037439613527;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 183.079399141631;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-07:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -199,6 +206,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0011;
 SLOPE = 0.107276570048309;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 183.522727272727;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-08:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -215,6 +223,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0008;
 SLOPE = 0.108559782608696;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 182.327586206896;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-09:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -257,6 +266,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0002;
 SLOPE = 0.0989613526570049;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 176.594827586207;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-01:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -273,6 +283,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0006;
 SLOPE = 0.101352657004831;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 182.039045553145;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-02:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -289,6 +300,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0010;
 SLOPE = 0.101352657004831;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 182.039045553145;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-03:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -305,6 +317,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0003;
 SLOPE = 0.101763285024155;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 181.987041036717;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-04:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -321,6 +334,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0001;
 SLOPE = 0.103007246376812;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 182.24358974359;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-05:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -337,6 +351,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0004;
 SLOPE = 0.102617753623188;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 182.725806451613;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-06:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -353,6 +368,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0005;
 SLOPE = 0.103037439613527;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 183.079399141631;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-07:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -369,6 +385,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0011;
 SLOPE = 0.107276570048309;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 183.522727272727;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-08:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -385,6 +402,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0008;
 SLOPE = 0.108559782608696;
 INTERCEPT = 0;
+MAGNETIC_LENGTH = 182.327586206896;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-09:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -397,6 +415,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR10;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0009;
+SLOPE = 0.108940217;
+INTERCEPT = 0;
+MAGNETIC_LENGTH = 183.0;
 PV_ROOT = EBT-INJ-MAG-VCOR-10:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
@@ -408,6 +431,11 @@ DEGAUSS_TOLERANCE  = 0.1;
 MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = VCOR11;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0007;
+SLOPE = 0.109396135;
+INTERCEPT = 0;
+MAGNETIC_LENGTH = 182.3;
 PV_ROOT = EBT-INJ-MAG-VCOR-11:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
