--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -86,7 +86,7 @@ NAME = HCOR01;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0002;
 SLOPE = 0.0989613526570049;
-INTERCEPT = 0;
+INTERCEPT = 0.0;
 MAGNETIC_LENGTH = 176.594827586207;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-01:;
@@ -419,7 +419,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0009;
 SLOPE = 0.108940217;
 INTERCEPT = 0;
-MAGNETIC_LENGTH = 183.0;
+MAGNETIC_LENGTH = 182.9665314;
 PV_ROOT = EBT-INJ-MAG-VCOR-10:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
@@ -435,7 +435,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0007;
 SLOPE = 0.109396135;
 INTERCEPT = 0;
-MAGNETIC_LENGTH = 182.3;
+MAGNETIC_LENGTH = 182.2535211;
 PV_ROOT = EBT-INJ-MAG-VCOR-11:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
