added magnetic length to DIP01 config

--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -670,6 +670,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM02;
 SLOPE = 0.0193137838642453;
 INTERCEPT = 0.0007;
+MAGNETIC_LENGTH = 402.9;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-DIP-01:;
 MAG_TYPE = DIP;
