--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -734,9 +734,9 @@ NAME = DIP01;
 POSITION = 3.944;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM02;
-SLOPE = 0.0193137838642453;
-INTERCEPT = 0.0007;
-MAGNETIC_LENGTH = 402.9;
+SLOPE = 7.843022018;
+INTERCEPT = -0.170999156;
+MAGNETIC_LENGTH = 402.89226;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-DIP-01:;
 MAG_TYPE = DIP;
@@ -755,8 +755,9 @@ NAME = DIP02;
 POSITION = 16.169;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM01;
-SLOPE = 0.0193449781659389;
-INTERCEPT = 0.0007;
+SLOPE = 7.815047451;
+INTERCEPT = 0.001618162;
+MAGNETIC_LENGTH = 403.3048322;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-DIP-02:;
 MAG_TYPE = DIP;
@@ -773,8 +774,9 @@ NAME = DIP03;
 POSITION = 17.859;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM03;
-SLOPE = 0.0193770450006374;
-INTERCEPT = 0.0006;
+SLOPE = 7.83149709;
+INTERCEPT = 0.037292101;
+MAGNETIC_LENGTH = 403.376654;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-DIP-03:;
 MAG_TYPE = DIP;
