--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -49,7 +49,8 @@ NUMBER_OF_ILOCKS  = 0;  Most have 6 or 8 (but not the BSOL). Redefine before the
 
 NAME = BSOL;
 POSITION = 0.000; longitudinal position along the lattice (in metres) - used to define magnet order
-MANUFACTURER = Strathclyde;
+MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 15079;
 PV_ROOT = EBT-INJ-MAG-BSOL-01:  ;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = BSOL;
@@ -63,6 +64,8 @@ MAG_SET_MAX_WAIT_TIME = 45;
 NUMBER_OF_ILOCKS  = 6;
 
 NAME = SOL;
+MANUFACTURER = SEF;
+SERIAL_NUMBER = 02;
 POSITION = 0.197;
 SLOPE = 0.00120539455199735;      integrated strength = slope * current + intercept
 INTERCEPT = 0.00103087438201299;  (of course integrated strength units depend on magnet type)
@@ -246,6 +249,12 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR10;
 POSITION = 16.732;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0009;
+SLOPE = 0.109960366;
+INTERCEPT = 0;
+MAGNETIC_LENGTH = 182.966531440162;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-10:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
@@ -258,6 +267,12 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR11;
 POSITION = 18.958;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0007;
+SLOPE = 0.109396135;
+INTERCEPT = 0;
+MAGNETIC_LENGTH = 182.2535211;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-11:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
@@ -441,6 +456,7 @@ SERIAL_NUMBER = 1279-14610-0009;
 SLOPE = 0.108940217;
 INTERCEPT = 0;
 MAGNETIC_LENGTH = 182.9665314;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-10:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
@@ -458,6 +474,7 @@ SERIAL_NUMBER = 1279-14610-0007;
 SLOPE = 0.109396135;
 INTERCEPT = 0;
 MAGNETIC_LENGTH = 182.2535211;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-11:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
@@ -716,6 +733,12 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD15;
 POSITION = 23.493;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EMDQM08;
+SLOPE = 0.111954754;
+INTERCEPT = -0.001381788;
+MAGNETIC_LENGTH = 70.4236023746139;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-15:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
