Fixed number of objects

--- a/Config/claraINJMagnets.config
+++ b/Config/claraINJMagnets.config
@@ -41,7 +41,7 @@ PV_COUNT = 1;
 PV_MASK = DBE_VALUE;
 
 OBJECTS_START;
-NUMBER_OF_OBJECTS = 42; ???
+NUMBER_OF_OBJECTS = 8;
 
 NUMBER_OF_ILOCKS  = 0; ??? Most have 6 or 8 (but not the BSOL). Redefine before the "NAME" paramater"
 
