--- a/Config/claraS02Magnets.config
+++ b/Config/claraS02Magnets.config
@@ -95,6 +95,20 @@ DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  
 DEGAUSS_TOLERANCE  = 0.1; ???
 MAG_SET_MAX_WAIT_TIME = 45; ???
 
+NAME = HCOR04;
+POSITION = 11.80065268; Length of C2V and SP1 line added on to put HVCOR04 after it
+MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 0; ???
+PV_ROOT = CLA-S02-MAG-HCOR-04:;
+PV_PSU_ROOT = CLA-S02-MAG-HVCOR-04:;
+MAG_TYPE = HCOR;
+MAG_REV_TYPE = BIPOLAR;
+RI_TOLERANCE = 0.01; ???
+NUM_DEGAUSS_STEPS = 11; ???
+DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0; ???
+DEGAUSS_TOLERANCE  = 0.1; ???
+MAG_SET_MAX_WAIT_TIME = 45; ???
+
 NAME = C2VHCOR01;
 POSITION = 6.536928145;
 MANUFACTURER = Danfysik;
@@ -152,6 +166,20 @@ SERIAL_NUMBER = 0; ???
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S02-MAG-VCOR-03:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-03:;
+MAG_TYPE = VCOR;
+MAG_REV_TYPE = BIPOLAR;
+RI_TOLERANCE = 0.01; ???
+NUM_DEGAUSS_STEPS = 11; ???
+DEGAUSS_VALUES  = 6.0,   -6.0,   4.0,   -4.0,   3.0,  -3.0,  2.0,  -2.0,  1.0,  -1.0,  0.0; ???
+DEGAUSS_TOLERANCE  = 0.1; ???
+MAG_SET_MAX_WAIT_TIME = 45; ???
+
+NAME = VCOR04;
+POSITION = 11.80065268; Length of C2V and SP1 line added on to put HVCOR04 after it
+MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 0; ???
+PV_ROOT = CLA-S02-MAG-VCOR-04:;
+PV_PSU_ROOT = CLA-S02-MAG-HVCOR-04:;
 MAG_TYPE = VCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.01; ???
