More magnet data
Serial numbers, slopes, intercepts, magnetic lengths for lots of
magnets.

--- a/Config/claraINJMagnets.config
+++ b/Config/claraINJMagnets.config
@@ -67,6 +67,8 @@ NUMBER_OF_ILOCKS  = 6; ???
 
 NAME = SOL;
 POSITION = 0.127;
+MANUFACTURER = SEF;
+SERIAL_NUMBER = 01;
 PV_ROOT = CLA-GUN-MAG-SOL-02:;
 MAG_TYPE = SOL;
 MAG_REV_TYPE = NR; ???
@@ -78,6 +80,8 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 
 NAME = LIN01SOL01; ???
 POSITION = 0.281;
+MANUFACTURER = Efremov Institute;
+SERIAL_NUMBER = 08;
 PV_ROOT = CLA-L01-MAG-SOL-01:;
 MAG_TYPE = SOL;
 MAG_REV_TYPE = NR; ???
@@ -89,6 +93,8 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 
 NAME = LIN01SOL02; ???
 POSITION = 0.587;
+MANUFACTURER = Efremov Institute;
+SERIAL_NUMBER = 09;
 PV_ROOT = CLA-L01-MAG-SOL-02:;
 MAG_TYPE = SOL;
 MAG_REV_TYPE = NR; ???
@@ -108,7 +114,10 @@ NUMBER_OF_ILOCKS  = 8; ???
 NAME = HCOR01;
 POSITION = 0.35482; From here on in the positions are taken from PHW's layout CSV (CLA-EBT_V10_layout.csv)
 MANUFACTURER = Danfysik;
-SERIAL_NUMBER = 0; ???
+SERIAL_NUMBER = 13258;
+SLOPE = 0.023624156190865;
+INTERCEPT = 0.00354362342862975;
+MAGNETIC_LENGTH = 131.245312171472;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S01-MAG-HCOR-01:;
 PV_PSU_ROOT = CLA-S01-MAG-HVCOR-01:; ???
@@ -123,7 +132,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = HCOR02;
 POSITION = 0.9377;
 MANUFACTURER = Danfysik;
-SERIAL_NUMBER = 0; ???
+SERIAL_NUMBER = 13259;
+SLOPE = 0.0234042553191489;
+INTERCEPT = 0;
+MAGNETIC_LENGTH = 125;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S01-MAG-HCOR-02:;
 PV_PSU_ROOT = CLA-S01-MAG-HVCOR-02:; ???
@@ -143,7 +155,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = VCOR01;
 POSITION = 0.35482; From here on in the positions are taken from PHW's layout CSV (CLA-EBT_V10_layout.csv)
 MANUFACTURER = Danfysik;
-SERIAL_NUMBER = 0; ???
+SERIAL_NUMBER = 13258;
+SLOPE = 0.0231571709981465;
+INTERCEPT = 0.00347357564972197;
+MAGNETIC_LENGTH = 128.650949989703;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S01-MAG-VCOR-01:;
 PV_PSU_ROOT = CLA-S01-MAG-HVCOR-01:; ???
@@ -158,7 +173,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = VCOR02;
 POSITION = 0.9377;
 MANUFACTURER = Danfysik;
-SERIAL_NUMBER = 0; ???
+SERIAL_NUMBER = 13259;
+SLOPE = 0.0234042553191489;
+INTERCEPT = 0;
+MAGNETIC_LENGTH = 125;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S01-MAG-VCOR-02:;
 PV_PSU_ROOT = CLA-S01-MAG-HVCOR-02:; ???
