--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -757,9 +757,9 @@ NAME = DIP01;
 POSITION = 3.944;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM02;
-SLOPE = 7.843022018;
-INTERCEPT = -0.170999156;
-MAGNETIC_LENGTH = 402.89226;
+SLOPE = 8.026730731;
+INTERCEPT = 0.001661992;
+MAGNETIC_LENGTH = 414.229; For dipoles, the magnetic length is defined along the nominal arc length.
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-DIP-01:;
 MAG_TYPE = DIP;
@@ -778,9 +778,9 @@ NAME = DIP02;
 POSITION = 16.169;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM01;
-SLOPE = 7.815047451;
-INTERCEPT = 0.001618162;
-MAGNETIC_LENGTH = 403.3048322;
+SLOPE = 8.055827986;
+INTERCEPT = -0.175638903;
+MAGNETIC_LENGTH = 413.824;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-DIP-02:;
 MAG_TYPE = DIP;
@@ -797,9 +797,9 @@ NAME = DIP03;
 POSITION = 17.859;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM03;
-SLOPE = 7.83149709;
-INTERCEPT = 0.037292101;
-MAGNETIC_LENGTH = 403.376654;
+SLOPE = 8.045688429;
+INTERCEPT = 0.03831204;
+MAGNETIC_LENGTH = 414.409;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements;
 PV_ROOT = EBT-INJ-MAG-DIP-03:;
 MAG_TYPE = DIP;
