--- a/Config/claraS02Magnets.config
+++ b/Config/claraS02Magnets.config
@@ -53,7 +53,10 @@ NUMBER_OF_ILOCKS  = 8;
 NAME = HCOR01;
 POSITION = 3.448080313;
 MANUFACTURER = Danfysik;
-SERIAL_NUMBER = 0; ???
+SERIAL_NUMBER = 13260;
+SLOPE = 0.299132052459495;
+INTERCEPT = 0.00869167241506522;
+MAGNETIC_LENGTH = 163;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S02-MAG-HCOR-01:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-01:;
@@ -68,7 +71,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = HCOR02;
 POSITION = 4.268070313;
 MANUFACTURER = Danfysik;
-SERIAL_NUMBER = 0; ???
+SERIAL_NUMBER = 13262;
+SLOPE = 0.299132052459495;
+INTERCEPT = 0.00869167241506522;
+MAGNETIC_LENGTH = 163;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S02-MAG-HCOR-02:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-02:;
@@ -83,7 +89,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = HCOR03;
 POSITION = 4.845560313;
 MANUFACTURER = Danfysik;
-SERIAL_NUMBER = 0; ???
+SERIAL_NUMBER = 13261;
+SLOPE = 0.299132052459495;
+INTERCEPT = 0.00869167241506522;
+MAGNETIC_LENGTH = 163;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S02-MAG-HCOR-03:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-03:;
@@ -112,7 +121,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = C2VHCOR01;
 POSITION = 6.536928145;
 MANUFACTURER = Danfysik;
-SERIAL_NUMBER = 0; ???
+SERIAL_NUMBER = 13263;
+SLOPE = 0.139019971762932;
+INTERCEPT = 0.00336644233663128;
+MAGNETIC_LENGTH = 137;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-C2V-MAG-HCOR-01:;
 PV_PSU_ROOT = CLA-C2V-MAG-HVCOR-01:;
@@ -132,7 +144,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = VCOR01;
 POSITION = 3.448080313;
 MANUFACTURER = Danfysik;
-SERIAL_NUMBER = 0; ???
+SERIAL_NUMBER = 13260;
+SLOPE = 0.298156471708927;
+INTERCEPT = -0.0431940604081946;
+MAGNETIC_LENGTH = 163;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S02-MAG-VCOR-01:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-01:;
@@ -147,7 +162,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = VCOR02;
 POSITION = 4.268070313;
 MANUFACTURER = Danfysik;
-SERIAL_NUMBER = 0; ???
+SERIAL_NUMBER = 13262;
+SLOPE = 0.298156471708927;
+INTERCEPT = -0.0431940604081946;
+MAGNETIC_LENGTH = 163;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S02-MAG-VCOR-02:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-02:;
@@ -162,7 +180,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = VCOR03;
 POSITION = 4.845560313;
 MANUFACTURER = Danfysik;
-SERIAL_NUMBER = 0; ???
+SERIAL_NUMBER = 13261;
+SLOPE = 0.298156471708927;
+INTERCEPT = -0.0431940604081946;
+MAGNETIC_LENGTH = 163;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-S02-MAG-VCOR-03:;
 PV_PSU_ROOT = CLA-S02-MAG-HVCOR-03:;
@@ -191,7 +212,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = C2VVCOR01;
 POSITION = 6.536928145;
 MANUFACTURER = Danfysik;
-SERIAL_NUMBER = 0; ???
+SERIAL_NUMBER = 13263;
+SLOPE = 0.142064204721245;
+INTERCEPT = 0.00344016005203196;
+MAGNETIC_LENGTH = 140;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Correctors;
 PV_ROOT = CLA-C2V-MAG-VCOR-01:;
 PV_PSU_ROOT = CLA-C2V-MAG-HVCOR-01:;
@@ -213,6 +237,7 @@ NUMBER_OF_ILOCKS  = 6; ???
 NAME = QUAD01;
 POSITION = 3.577500313;
 MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 13248;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles;
 PV_ROOT = CLA-S02-MAG-QUAD-01:;
 MAG_TYPE = QUAD;
@@ -226,6 +251,7 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = QUAD02;
 POSITION = 3.977500313;
 MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 13250;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles;
 PV_ROOT = CLA-S02-MAG-QUAD-02:;
 MAG_TYPE = QUAD;
@@ -239,6 +265,7 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = QUAD03;
 POSITION = 5.277500313;
 MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 13251;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles;
 PV_ROOT = CLA-S02-MAG-QUAD-03:;
 MAG_TYPE = QUAD;
@@ -252,6 +279,7 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = QUAD04;
 POSITION = 5.677500313;
 MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 13252;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles;
 PV_ROOT = CLA-S02-MAG-QUAD-04:;
 MAG_TYPE = QUAD;
@@ -265,6 +293,7 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = QUAD05;
 POSITION = 11.66280268; Length of C2V and SP1 line added on to put QUAD05 after it
 MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 13249;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles;
 PV_ROOT = CLA-S02-MAG-QUAD-05:;
 MAG_TYPE = QUAD;
@@ -278,6 +307,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = C2VQUAD01;
 POSITION = 6.660148145;
 MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 13255;
+SLOPE = 0.016137404709095;
+INTERCEPT = 0.00940097014162213;
+MAGNETIC_LENGTH = 121.556480231061;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles;
 PV_ROOT = CLA-C2V-MAG-QUAD-01:;
 MAG_TYPE = QUAD;
@@ -291,6 +324,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = C2VQUAD02;
 POSITION = 6.950148145;
 MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 13254;
+SLOPE = 0.0161169906516754;
+INTERCEPT = 0.0119297723460136;
+MAGNETIC_LENGTH = 121.472699639078;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles;
 PV_ROOT = CLA-C2V-MAG-QUAD-02:;
 MAG_TYPE = QUAD;
@@ -304,6 +341,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = C2VQUAD03;
 POSITION = 7.240148145;
 MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 13253;
+SLOPE = 0.0161301555327918;
+INTERCEPT = 0.00954033237760887;
+MAGNETIC_LENGTH = 121.510191307177;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Quadrupoles;
 PV_ROOT = CLA-C2V-MAG-QUAD-03:;
 MAG_TYPE = QUAD;
@@ -323,6 +364,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = DIP01;
 POSITION = 6.226873613;
 MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 13256;
+SLOPE = 1.38896656;
+INTERCEPT = 0.78960865;
+MAGNETIC_LENGTH = 399.216; Defined along the nominal 45° arc
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Dipoles\Type 1;
 PV_ROOT = CLA-C2V-MAG-DIP-01:;
 MAG_TYPE = DIP;
@@ -336,6 +381,10 @@ MAG_SET_MAX_WAIT_TIME = 45; ???
 NAME = DIP02;
 POSITION = 7.972725978;
 MANUFACTURER = Danfysik;
+SERIAL_NUMBER = 13257;
+SLOPE = 0.895862155;
+INTERCEPT = 0.29346555;
+MAGNETIC_LENGTH = 397.752;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\CLARA\Magnets\Front end\Measurements\Dipoles\Type 2
 PV_ROOT = CLA-C2V-MAG-DIP-02:;
 MAG_TYPE = DIP;
