Reverse coefficient order
Reverse order of polynomial coefficients - now goes from high to zero
order, in line with numpy.polyval behaviour.

--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -64,7 +64,7 @@ NUMBER_OF_ILOCKS  = 6;
 
 NAME = SOL;
 POSITION = 0.197;
-FIELD_INTEGRAL_COEFFICIENTS = 0.00103087438201299,0.00120539455199735; polynomal expansion of field intgral vs current  where field_integral = a0+a1*current + a2*current^2 + a3*current^3
+FIELD_INTEGRAL_COEFFICIENTS = 0.00120539455199735,0.00103087438201299; polynomal expansion of field integral vs current where field_integral = a0*current^3 + a1*current^2 + a2*current + a3
 PV_ROOT = EBT-INJ-MAG-SOL-01:;
 MAG_TYPE = SOL;
 MAG_REV_TYPE = NR;
@@ -85,7 +85,7 @@ NAME = HCOR01;
 POSITION = 0.394;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0002;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0,0.0989613526570049;
+FIELD_INTEGRAL_COEFFICIENTS = 0.0989613526570049,0.0;
 MAGNETIC_LENGTH = 176.594827586207;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-01:;
@@ -102,7 +102,7 @@ NAME = HCOR02;
 POSITION = 1.042;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0006;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0, 0.101352657004831;
+FIELD_INTEGRAL_COEFFICIENTS =  0.101352657004831,0.0;
 MAGNETIC_LENGTH = 182.039045553145;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-02:;
@@ -119,7 +119,7 @@ NAME = HCOR03;
 POSITION = 2.310;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0010;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0,0.101352657004831;
+FIELD_INTEGRAL_COEFFICIENTS = 0.101352657004831, 0.0;
 MAGNETIC_LENGTH = 182.039045553145;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-03:;
@@ -136,7 +136,7 @@ NAME = HCOR04;
 POSITION = 3.183;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0003;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0,0.101763285024155;
+FIELD_INTEGRAL_COEFFICIENTS = 0.101763285024155, 0.0;
 MAGNETIC_LENGTH = 181.987041036717;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-04:;
@@ -153,7 +153,7 @@ NAME = HCOR05;
 POSITION = 4.648;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0001;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0,0.103007246376812;
+FIELD_INTEGRAL_COEFFICIENTS = 0.103007246376812, 0.0;
 MAGNETIC_LENGTH = 182.24358974359;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-05:;
@@ -170,7 +170,7 @@ NAME = HCOR06;
 POSITION = 7.239;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0004;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0,0.102617753623188;
+FIELD_INTEGRAL_COEFFICIENTS = 0.102617753623188, 0.0;
 MAGNETIC_LENGTH = 182.725806451613;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-06:;
@@ -187,7 +187,7 @@ NAME = HCOR07;
 POSITION = 9.831;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0005;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0,0.103037439613527;
+FIELD_INTEGRAL_COEFFICIENTS = 0.103037439613527, 0.0;
 MAGNETIC_LENGTH = 183.079399141631;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-07:;
@@ -204,7 +204,7 @@ NAME = HCOR08;
 POSITION = 12.141;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0011;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0,0.107276570048309;
+FIELD_INTEGRAL_COEFFICIENTS = 0.107276570048309, 0.0;
 MAGNETIC_LENGTH = 183.522727272727;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-08:;
@@ -221,7 +221,7 @@ NAME = HCOR09;
 POSITION = 15.634;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0008;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0,0.108559782608696;
+FIELD_INTEGRAL_COEFFICIENTS = 0.108559782608696, 0.0;
 MAGNETIC_LENGTH = 182.327586206896;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-09:;
@@ -266,7 +266,7 @@ NAME = VCOR01;
 POSITION = 0.394;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0002;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0,0.0989613526570049;
+FIELD_INTEGRAL_COEFFICIENTS = 0.0989613526570049, 0.0;
 MAGNETIC_LENGTH = 176.594827586207;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-01:;
@@ -283,7 +283,7 @@ NAME = VCOR02;
 POSITION = 1.042;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0006;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0,0.101352657004831;
+FIELD_INTEGRAL_COEFFICIENTS = 0.101352657004831, 0.0;
 MAGNETIC_LENGTH = 182.039045553145;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-02:;
@@ -300,7 +300,7 @@ NAME = VCOR03;
 POSITION = 2.310;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0010;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0,0.101352657004831;
+FIELD_INTEGRAL_COEFFICIENTS = 0.101352657004831, 0.0;
 MAGNETIC_LENGTH = 182.039045553145;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-03:;
@@ -317,7 +317,7 @@ NAME = VCOR04;
 POSITION = 3.183;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0003;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0,0.101763285024155;
+FIELD_INTEGRAL_COEFFICIENTS = 0.101763285024155, 0.0;
 MAGNETIC_LENGTH = 181.987041036717;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-04:;
@@ -334,7 +334,7 @@ NAME = VCOR05;
 POSITION = 4.648;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0001;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0,0.103007246376812;
+FIELD_INTEGRAL_COEFFICIENTS = 0.103007246376812, 0.0;
 MAGNETIC_LENGTH = 182.24358974359;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-05:;
@@ -351,7 +351,7 @@ NAME = VCOR06;
 POSITION = 7.239;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0004;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0, 0.102617753623188;
+FIELD_INTEGRAL_COEFFICIENTS =  0.102617753623188, 0.0;
 MAGNETIC_LENGTH = 182.725806451613;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-06:;
@@ -368,7 +368,7 @@ NAME = VCOR07;
 POSITION = 9.831;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0005;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0, 0.103037439613527;
+FIELD_INTEGRAL_COEFFICIENTS =  0.103037439613527, 0.0;
 MAGNETIC_LENGTH = 183.079399141631;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-07:;
@@ -385,7 +385,7 @@ NAME = VCOR08;
 POSITION = 12.141;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0011;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0, 0.107276570048309;
+FIELD_INTEGRAL_COEFFICIENTS =  0.107276570048309, 0.0;
 MAGNETIC_LENGTH = 183.522727272727;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-08:;
@@ -402,7 +402,7 @@ NAME = VCOR09;
 POSITION = 15.634;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0008;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0, 0.108559782608696;
+FIELD_INTEGRAL_COEFFICIENTS =  0.108559782608696, 0.0;
 MAGNETIC_LENGTH = 182.327586206896;
 MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-09:;
@@ -419,7 +419,7 @@ NAME = VCOR10;
 POSITION = 16.732;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0009;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0, 0.108940217;
+FIELD_INTEGRAL_COEFFICIENTS =  0.108940217, 0.0;
 MAGNETIC_LENGTH = 182.9665314;
 PV_ROOT = EBT-INJ-MAG-VCOR-10:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -435,7 +435,7 @@ NAME = VCOR11;
 POSITION = 18.958;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0007;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0, 0.109396135;
+FIELD_INTEGRAL_COEFFICIENTS =  0.109396135, 0.0;
 MAGNETIC_LENGTH = 182.2535211;
 PV_ROOT = EBT-INJ-MAG-VCOR-11:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -457,7 +457,7 @@ NAME = QUAD01;
 POSITION = 1.352;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M08;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0025482705782263,  0.104277992372682;
+FIELD_INTEGRAL_COEFFICIENTS =   0.104277992372682, 0.0025482705782263;
 MAGNETIC_LENGTH = 125.368867474869;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-01:;
@@ -473,7 +473,7 @@ NAME = QUAD02;
 POSITION = 1.493;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M04;
-FIELD_INTEGRAL_COEFFICIENTS =  0.00237250194124666,0.104135447175047;
+FIELD_INTEGRAL_COEFFICIENTS = 0.104135447175047,  0.00237250194124666;
 MAGNETIC_LENGTH = 125.145131747801;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-02:;
@@ -489,7 +489,7 @@ NAME = QUAD03;
 POSITION = 1.662;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M07;
-FIELD_INTEGRAL_COEFFICIENTS = 0.00257735827842411,0.10423548260287;
+FIELD_INTEGRAL_COEFFICIENTS = 0.10423548260287, 0.00257735827842411;
 MAGNETIC_LENGTH = 125.337920371927;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-03:;
@@ -505,7 +505,7 @@ NAME = QUAD04;
 POSITION = 1.831;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M09;
-FIELD_INTEGRAL_COEFFICIENTS = 0.00236407828336409,0.104228631153691;
+FIELD_INTEGRAL_COEFFICIENTS = 0.104228631153691, 0.00236407828336409;
 MAGNETIC_LENGTH = 125.244281671835;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-04:;
@@ -521,7 +521,7 @@ NAME = QUAD05;
 POSITION = 4.845;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M05;
-FIELD_INTEGRAL_COEFFICIENTS = 0.00260277456365575,0.104257662272452;
+FIELD_INTEGRAL_COEFFICIENTS = 0.104257662272452, 0.00260277456365575;
 MAGNETIC_LENGTH = 125.223958037202;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-05:;
@@ -537,7 +537,7 @@ NAME = QUAD06;
 POSITION = 5.099;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M02;
-FIELD_INTEGRAL_COEFFICIENTS = 0.00276894282540757,0.104277150901771;
+FIELD_INTEGRAL_COEFFICIENTS = 0.104277150901771, 0.00276894282540757;
 MAGNETIC_LENGTH = 125.033079276906;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-06:;
@@ -555,7 +555,7 @@ NAME = QUAD07;
 POSITION = 7.380;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M03;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0025714442257629,0.102760380363229;
+FIELD_INTEGRAL_COEFFICIENTS = 0.102760380363229, 0.0025714442257629;
 MAGNETIC_LENGTH = 125.299909233924;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-07:;
@@ -571,7 +571,7 @@ NAME = QUAD08;
 POSITION = 7.577;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M01;
-FIELD_INTEGRAL_COEFFICIENTS = 0.00267552683439267,0.102891849667145;
+FIELD_INTEGRAL_COEFFICIENTS = 0.102891849667145, 0.00267552683439267;
 MAGNETIC_LENGTH = 125.27558356645;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-08:;
@@ -587,7 +587,7 @@ NAME = QUAD09;
 POSITION = 9.972;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EMDQM06;
-FIELD_INTEGRAL_COEFFICIENTS = -0.00132252769474545,0.111939163037871;
+FIELD_INTEGRAL_COEFFICIENTS = 0.111939163037871, -0.00132252769474545;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-09:;
@@ -603,7 +603,7 @@ NAME = QUAD10;
 POSITION = 12.676;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EMDQM05;
-FIELD_INTEGRAL_COEFFICIENTS = -0.00170732356716569,0.111966157109812;
+FIELD_INTEGRAL_COEFFICIENTS = 0.111966157109812, -0.00170732356716569;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-10:;
@@ -619,7 +619,7 @@ NAME = QUAD11;
 POSITION = 14.901;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EMDQM02;
-FIELD_INTEGRAL_COEFFICIENTS = -0.00182025848896622,0.112072763436341;
+FIELD_INTEGRAL_COEFFICIENTS = 0.112072763436341, -0.00182025848896622;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-11:;
@@ -636,7 +636,7 @@ NAME = QUAD12;
 POSITION = 17.042;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EMIQM04;
-FIELD_INTEGRAL_COEFFICIENTS = 6.76912235527686E-05,1.58996386665694;
+FIELD_INTEGRAL_COEFFICIENTS = 1.58996386665694, 6.76912235527686E-05;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Injection line\SCX Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-12:;
@@ -651,7 +651,7 @@ NAME = QUAD13;
 POSITION = 19.155;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFQ2M06;
-FIELD_INTEGRAL_COEFFICIENTS = 0.0025714442257629,0.104257662272452;
+FIELD_INTEGRAL_COEFFICIENTS = 0.104257662272452, 0.0025714442257629;
 MAGNETIC_LENGTH = 125.299909233924;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-13:;
@@ -667,7 +667,7 @@ NAME = QUAD14;
 POSITION = 19.634;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EMIQM05;
-FIELD_INTEGRAL_COEFFICIENTS = -0.022877181714572,1.59235070995081;
+FIELD_INTEGRAL_COEFFICIENTS = 1.59235070995081, -0.022877181714572;
 MAGNETIC_LENGTH = 70.4236023746139;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Injection line\SCX Measurements";
 PV_ROOT = EBT-INJ-MAG-QUAD-14:;
@@ -699,7 +699,7 @@ NAME = DIP01;
 POSITION = 3.944;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM02;
-FIELD_INTEGRAL_COEFFICIENTS = -0.170999156,7.843022018;
+FIELD_INTEGRAL_COEFFICIENTS = 7.843022018, -0.170999156;
 MAGNETIC_LENGTH = 402.89226;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-DIP-01:;
@@ -719,7 +719,7 @@ NAME = DIP02;
 POSITION = 16.169;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM01;
-FIELD_INTEGRAL_COEFFICIENTS = 0.001618162,7.815047451;
+FIELD_INTEGRAL_COEFFICIENTS = 7.815047451, 0.001618162;
 MAGNETIC_LENGTH = 403.3048322;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-DIP-02:;
@@ -737,7 +737,7 @@ NAME = DIP03;
 POSITION = 17.859;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM03;
-FIELD_INTEGRAL_COEFFICIENTS =  0.037292101,7.83149709;
+FIELD_INTEGRAL_COEFFICIENTS = 7.83149709,  0.037292101;
 MAGNETIC_LENGTH = 403.376654;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-DIP-03:;
