Add for BSOL, HCOR10
Added FICs for BSOL, HCOR10.

--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -50,6 +50,7 @@ NUMBER_OF_ILOCKS  = 0;  Most have 6 or 8 (but not the BSOL). Redefine before the
 NAME = BSOL;
 POSITION = 0.000; longitudinal position along the lattice (in metres) - used to define magnet order
 MANUFACTURER = Strathclyde;
+FIELD_INTEGRAL_COEFFICIENTS = 1.0, 0.0; FIXME: change these to something more sensible!
 PV_ROOT = EBT-INJ-MAG-BSOL-01:  ;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = BSOL;
@@ -238,6 +239,7 @@ NAME = HCOR10;
 POSITION = 16.732;
 PV_ROOT = EBT-INJ-MAG-HCOR-10:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
+FIELD_INTEGRAL_COEFFICIENTS = 0.109960366, 0.0;
 MAG_TYPE = HCOR;
 MAG_REV_TYPE = BIPOLAR;
 RI_TOLERANCE = 0.015;
