--- a/Config/velaINJMagnets.config
+++ b/Config/velaINJMagnets.config
@@ -49,7 +49,7 @@ NUMBER_OF_ILOCKS  = 0;  Most have 6 or 8 (but not the BSOL). Redefine before the
 
 NAME = BSOL;
 POSITION = 0.000; longitudinal position along the lattice (in metres) - used to define magnet order
-MANUFACTURER = Strathclyde;
+MANUFACTURER = Danfysik;
 FIELD_INTEGRAL_COEFFICIENTS = 1.0, 0.0; FIXME: change these to something more sensible!
 PV_ROOT = EBT-INJ-MAG-BSOL-01:  ;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
@@ -64,6 +64,8 @@ MAG_SET_MAX_WAIT_TIME = 45;
 NUMBER_OF_ILOCKS  = 6;
 
 NAME = SOL;
+MANUFACTURER = SEF;
+SERIAL_NUMBER = 02;
 POSITION = 0.197;
 FIELD_INTEGRAL_COEFFICIENTS = 0.00120539455199735,0.00103087438201299; polynomal expansion of field integral vs current where field_integral = a0*current^3 + a1*current^2 + a2*current + a3
 PV_ROOT = EBT-INJ-MAG-SOL-01:;
@@ -237,6 +239,10 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR10;
 POSITION = 16.732;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0009;
+MAGNETIC_LENGTH = 182.966531440162;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-10:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 FIELD_INTEGRAL_COEFFICIENTS = 0.109960366, 0.0;
@@ -250,6 +256,11 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = HCOR11;
 POSITION = 18.958;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = 1279-14610-0007;
+FIELD_INTEGRAL_COEFFICIENTS = 0.109396135, 0.0;
+MAGNETIC_LENGTH = 182.2535211;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-HCOR-11:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = HCOR;
@@ -423,6 +434,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0009;
 FIELD_INTEGRAL_COEFFICIENTS =  0.108940217, 0.0;
 MAGNETIC_LENGTH = 182.9665314;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-10:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
@@ -439,6 +451,7 @@ MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = 1279-14610-0007;
 FIELD_INTEGRAL_COEFFICIENTS =  0.109396135, 0.0;
 MAGNETIC_LENGTH = 182.2535211;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Correctors\Measurements;
 PV_ROOT = EBT-INJ-MAG-VCOR-11:;
 PV_PSU_ROOT = EBT-INJ-MAG-HVCOR-01:;
 MAG_TYPE = VCOR;
@@ -683,6 +696,11 @@ MAG_SET_MAX_WAIT_TIME = 45;
 
 NAME = QUAD15;
 POSITION = 23.493;
+MANUFACTURER = Scanditronix;
+SERIAL_NUMBER = EMDQM08;
+FIELD_INTEGRAL_COEFFICIENTS = 0.111954754, -0.001381788;
+MAGNETIC_LENGTH = 70.4236023746139;
+MEASUREMENT_DATA_LOCATION = \\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\EMMA\magnets\procurement\Diagnostic Line Magnets\Measurements;
 PV_ROOT = EBT-INJ-MAG-QUAD-15:;
 MAG_TYPE = QUAD;
 MAG_REV_TYPE = NR;
@@ -701,8 +719,8 @@ NAME = DIP01;
 POSITION = 3.944;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM02;
-FIELD_INTEGRAL_COEFFICIENTS = 7.843022018, -0.170999156;
-MAGNETIC_LENGTH = 402.89226;
+FIELD_INTEGRAL_COEFFICIENTS = 8.026730731, 0.001661992;
+MAGNETIC_LENGTH = 414.229; For dipoles, the magnetic length is defined along the nominal arc length.
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-DIP-01:;
 MAG_TYPE = DIP;
@@ -721,8 +739,8 @@ NAME = DIP02;
 POSITION = 16.169;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM01;
-FIELD_INTEGRAL_COEFFICIENTS = 7.815047451, 0.001618162;
-MAGNETIC_LENGTH = 403.3048322;
+FIELD_INTEGRAL_COEFFICIENTS = 8.055827986, -0.175638903;
+MAGNETIC_LENGTH = 413.824;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-DIP-02:;
 MAG_TYPE = DIP;
@@ -739,8 +757,8 @@ NAME = DIP03;
 POSITION = 17.859;
 MANUFACTURER = Scanditronix;
 SERIAL_NUMBER = EBTFDIM03;
-FIELD_INTEGRAL_COEFFICIENTS = 7.83149709,  0.037292101;
-MAGNETIC_LENGTH = 403.376654;
+FIELD_INTEGRAL_COEFFICIENTS = 8.045688429, 0.03831204;
+MAGNETIC_LENGTH = 414.409;
 MEASUREMENT_DATA_LOCATION = "\\fed.cclrc.ac.uk\Org\NLab\ASTeC\Projects\VELA\Magnets\Dipoles & quadrupoles\Measurements";
 PV_ROOT = EBT-INJ-MAG-DIP-03:;
 MAG_TYPE = DIP;
